--- a/.github/workflows/validate-test.yml
+++ b/.github/workflows/validate-test.yml
@@ -1,12 +1,8 @@
-name: Ruby Lint and Syntax Check
+name: Run RuboCop and Rspec
 
 on:
   push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - main
 
 jobs:
   lint:
@@ -35,5 +31,7 @@ jobs:
         bundle install --jobs 4 --retry 3
 
     - name: Run RuboCop
-      run: bundle exec rake cop
+      run: bundle exec rake rubocop
 
+    - name: Run Rspec
+      run: bundle exec rake rspec
