refactor into utils and lib module

--- a/.github/workflows/validate-test.yml
+++ b/.github/workflows/validate-test.yml
@@ -5,8 +5,7 @@ on:
   pull_request:
 
 jobs:
-  lint:
-    name: Lint and Syntax Check
+  validate-test:
     runs-on: ubuntu-latest
 
     # Define the Docker container to use for the job
